@@ -6,6 +6,7 @@ Lego Editor Change Log
   *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
   *  Fixed a null pointer that could happen if you brought up an editor tab before the commonly used 
   		concepts finished intializing.
+  *  Fixed a validator error with Relationship Groups
   *  artf227108 Add Install4j installer script.
 
 2012/02/26 - 0.54
